Fix text wrapping in nots-notification-type-label

--- a/src/features/basic/nots-notification-type-label.module.css
+++ b/src/features/basic/nots-notification-type-label.module.css
@@ -1,5 +1,5 @@
 .label {
-  display: inline-block;
+  position: absolute;
   text-transform: uppercase;
   min-width: 65px;
   max-width: 65px;
